backend/svc-finops-backend-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: finops-backend
  namespace: finops-plugin
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: finops-backend-tls
spec:
  selector:
    app: finops-backend
  ports:
    - name: https
      port: 8443
      targetPort: 8443
